--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -29,7 +29,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: date stamp
         run: |
-          touch nmrpipe-tracker/DATE-STAMP
+          touch ./DATE-STAMP
           echo ${{ steps.current-time.outputs.formattedTime }} > nmrpipe-tracker/DATE-STAMP
 
 #       - name: Install SSH key
