--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches: [ main ]
 
-  schedule:
-    - cron: "0,10,20,30,40,50 * * * *"
+#  schedule:
+#    - cron: "0,10,20,30,40,50 * * * *"
 
   workflow_dispatch:
 
