--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Get pipe version
         run: |
-          python get_pipe_version.py >> PIPE_VERSION
+          python scripts/get_pipe_version.py >> PIPE_VERSION
 
 #      - name: checkout master
 #        working-directory: ./nmrpipe-tracker
