--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -60,32 +60,32 @@ jobs:
           touch ./DATE-STAMP
           echo ${{ steps.current-time.outputs.formattedTime }} > ./DATE-STAMP
 
-      - name date stamp in environment variable
+      - name: date stamp in environment variable
         run: |
           CURRENT_PIPE_VERSION=$(cat CURRENT_PIPE_VERSION)
 
 
-      - name: release
-          uses: actions/create-release@v1
-          id: create_release
-          with:
-            draft: false
-            prerelease: false
-            release_name: ${VERSION_PREFIX}.binval.com
-            tag_name: ${VERSION_PREFIX}.binval.com
-            body_path: CHANGELOG.md
-          env:
-            GITHUB_TOKEN: ${{ github.token }}
-
-      - name: upload artifact
-          uses: actions/upload-release-asset@v1
-          env:
-            GITHUB_TOKEN: ${{ github.token }}
-          with:
-            upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: ./MIRROR/binval.com
-            asset_name: ${VERSION_PREFIX}.binval.com
-            asset_content_type: application/text
+#      - name: release
+#          uses: actions/create-release@v1
+#          id: create_release
+#          with:
+#            draft: false
+#            prerelease: false
+#            release_name: ${VERSION_PREFIX}.binval.com
+#            tag_name: ${VERSION_PREFIX}.binval.com
+#            body_path: CHANGELOG.md
+#          env:
+#            GITHUB_TOKEN: ${{ github.token }}
+#
+#      - name: upload artifact
+#          uses: actions/upload-release-asset@v1
+#          env:
+#            GITHUB_TOKEN: ${{ github.token }}
+#          with:
+#            upload_url: ${{ steps.create_release.outputs.upload_url }}
+#            asset_path: ./MIRROR/binval.com
+#            asset_name: ${VERSION_PREFIX}.binval.com
+#            asset_content_type: application/text
 
 #       - name: Install SSH key
 #         uses: shimataro/ssh-key-action@v2
