test with break for single download

--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -45,6 +45,7 @@ jobs:
             for url in $(python3 scripts/list_urls.py PIPE_URLS_AND_CHECKSUMS); do
               file_name=$(python3 scripts/url_to_filename.py $url)
               wget $url -nv -O MIRROR/$file_name
+              break
             done
           fi
 
@@ -65,18 +66,18 @@ jobs:
           CURRENT_PIPE_VERSION=$(cat CURRENT_PIPE_VERSION)
 
 
-#      - name: release
-#          uses: actions/create-release@v1
-#          id: create_release
-#          with:
-#            draft: false
-#            prerelease: false
-#            release_name: ${VERSION_PREFIX}.binval.com
-#            tag_name: ${VERSION_PREFIX}.binval.com
-#            body_path: CHANGELOG.md
-#          env:
-#            GITHUB_TOKEN: ${{ github.token }}
-#
+      - name: release
+          uses: actions/create-release@v1
+          id: create_release
+          with:
+            draft: false
+            prerelease: false
+            release_name: ${VERSION_PREFIX}.binval.com
+            tag_name: ${VERSION_PREFIX}.binval.com
+            body_path: CHANGELOG.md
+          env:
+            GITHUB_TOKEN: ${{ github.token }}
+
 #      - name: upload artifact
 #          uses: actions/upload-release-asset@v1
 #          env:
