--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -66,17 +66,17 @@ jobs:
           CURRENT_PIPE_VERSION=$(cat CURRENT_PIPE_VERSION)
 
 
-      - name: release
-          uses: actions/create-release@v1
-          id: create_release
-          with:
-            draft: false
-            prerelease: false
-            release_name: ${VERSION_PREFIX}.binval.com
-            tag_name: ${VERSION_PREFIX}.binval.com
-            body_path: CHANGELOG.md
-          env:
-            GITHUB_TOKEN: ${{ github.token }}
+#      - name: release
+#          uses: actions/create-release@v1
+#          id: create_release
+#          with:
+#            draft: false
+#            prerelease: false
+#            release_name: ${VERSION_PREFIX}.binval.com
+#            tag_name: ${VERSION_PREFIX}.binval.com
+#            body_path: CHANGELOG.md
+#          env:
+#            GITHUB_TOKEN: ${{ github.token }}
 
 #      - name: upload artifact
 #          uses: actions/upload-release-asset@v1
