--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -74,7 +74,7 @@ jobs:
           prerelease: false
           release_name: ${VERSION_PREFIX}.binval.com
           tag_name: ${VERSION_PREFIX}.binval.com
-          body_path: CHANGELOG.md
+          body: test
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
