update tags to contain nmrpipe

--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -77,8 +77,8 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: ${{ env.CURRENT_PIPE_VERSION }}.binval.com
-          tag_name: ${{ env.CURRENT_PIPE_VERSION }}.binval.com
+          release_name: nmrpipe.${{ env.CURRENT_PIPE_VERSION }}.binval.com
+          tag_name: nmrpipe.${{ env.CURRENT_PIPE_VERSION }}.binval.com
           body: test
         env:
           GITHUB_TOKEN: ${{ github.token }}
