--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -40,10 +40,10 @@ jobs:
       - name: Download nmrpipe if not current
         run: |
           if ! cmp --silent -- CURRENT_PIPE_VERSION PIPE_VERSION; then
-            python scripts/get_pipe_urls.py > PIPE_URLS_AND_CHECKSUMS
+            python .github/workflows/scripts/get_pipe_urls.py > PIPE_URLS_AND_CHECKSUMS
             mkdir MIRROR
-            for url in $(python3 scripts/list_urls.py PIPE_URLS_AND_CHECKSUMS); do
-              file_name=$(python3 scripts/url_to_filename.py $url)
+            for url in $(python3 .github/workflows/scripts/list_urls.py PIPE_URLS_AND_CHECKSUMS); do
+              file_name=$(python3 .github/workflows/scripts/url_to_filename.py $url)
               wget $url -nv -O MIRROR/$file_name
               break
             done
