--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -88,7 +88,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag_name=nmrpipe-${{ env.CURRENT_PIPE_VERSION }}
-          hub release edit $(find . -type f -name "MIRROR/*" -printf "-a %p ") -m "" "$tag_name"
+          hub release edit $(find ./MIRROR -type f -name "*" -printf "-a %p ") -m "" "$tag_name"
 
 #      - name: release
 #        uses: actions/create-release@v1
