--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -2,11 +2,11 @@
 name: TRACK_NMRPIPE
 on:
 
-  push:
-    branches: [ main ]
+#  push:
+#    branches: [ main ]
 
-#  schedule:
-#    - cron: "0,10,20,30,40,50 * * * *"
+  schedule:
+    - cron: "0 6 * * *"
 
   workflow_dispatch:
 
