--- a/.github/workflows/track_nmpipe.yml
+++ b/.github/workflows/track_nmpipe.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  release:
+  track:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -58,7 +58,6 @@ jobs:
         run:  |
           python .github/workflows/scripts/cksum.py "PIPE_URLS_AND_CHECKSUMS"
 
-      # Runs a set of commands using the runners shell
       - name: Create a date stamp
         if: ${{ env.DOWNLOAD == '1'}}
         run: |
@@ -100,37 +99,6 @@ jobs:
           rm -rf MIRROR
           rm PIPE_URLS_AND_CHECKSUMS
           rm DATE_STAMP
-
-#      - name: release
-#        uses: actions/create-release@v1
-#        id: create_release
-#        with:
-#          draft: false
-#          prerelease: false
-#          release_name: nmrpipe-${{ env.CURRENT_PIPE_VERSION }}
-#          tag_name: nmrpipe-${{ env.CURRENT_PIPE_VERSION }}
-#          body: test
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-#
-#      - name: upload artifact
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: ./MIRROR/binval.com
-#          asset_name: binval.com
-#          asset_content_type: application/text
-
-#       - name: Install SSH key
-#         uses: shimataro/ssh-key-action@v2
-#         with:
-#           key: ${{ secrets.NMRPIPE_PRIVATE_KEY }}
-#           name: id_ed25519 # optional
-#           known_hosts: ${{ secrets.KNOWN_HOST_GITHUB }}
-# #          config: ${{ secrets.CONFIG }} # ssh_config; optional
-#           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
 
       - name: Commit
         if: ${{ env.DOWNLOAD  == '1'}}
